--- a/assets/fonts/Icon-font/styles.css
+++ b/assets/fonts/Icon-font/styles.css
@@ -39,71 +39,74 @@
 }
 
 .icon-upload:before {
-  content: "a";
+  content: "\61";
 }
 .icon-up:before {
-  content: "b";
+  content: "\62";
 }
 .icon-right:before {
-  content: "c";
+  content: "\63";
 }
 .icon-add:before {
-  content: "d";
+  content: "\64";
 }
 .icon-approved:before {
-  content: "e";
+  content: "\65";
 }
 .icon-down:before {
-  content: "f";
+  content: "\69";
 }
 .icon-left:before {
-  content: "g";
+  content: "\6a";
 }
 .icon-pending:before {
-  content: "h";
+  content: "\6c";
 }
 .icon-rejected:before {
-  content: "i";
+  content: "\70";
 }
 .icon-loading:before {
-  content: "j";
+  content: "\66";
 }
 .icon-oc-icon:before {
-  content: "k";
+  content: "\67";
 }
 .icon-upload-photo:before {
-  content: "l";
+  content: "\68";
 }
 .icon-camera:before {
-  content: "m";
+  content: "\6b";
 }
 .icon-gear:before {
-  content: "n";
+  content: "\6d";
 }
 .icon-user:before {
-  content: "o";
+  content: "\6e";
 }
 .icon-password:before {
-  content: "p";
+  content: "\6f";
 }
 .icon-mail:before {
-  content: "q";
+  content: "\71";
 }
 .icon-link:before {
-  content: "r";
+  content: "\72";
 }
 .icon-facebook:before {
-  content: "s";
+  content: "\73";
 }
 .icon-expense:before {
-  content: "t";
+  content: "\74";
 }
 .icon-embed:before {
-  content: "u";
+  content: "\75";
 }
 .icon-twitter:before {
-  content: "v";
+  content: "\76";
 }
 .icon-revenue:before {
-  content: "w";
+  content: "\77";
+}
+.icon-ribbon:before {
+  content: "\78";
 }
